* Updated LAV Filters to v0.60.1.4:
    - Ticket #3540, LAV Splitter: The current/average bitrate is now shown in the Information panel
    - Ticket #3760, LAV Video: Fix a crash when opening some DVDs on 64-bit
    - Ticket #3793, LAV Video: Fix a decoding issue with some H264 files
    - Ticket #3849, LAV Video: DXVA VC1/WMV3 decoding now works on Intel cards
    - Ticket #3862, LAV Splitter: Fix a crash when opening MKV files with big attachments
    - Ticket #3929, LAV Video: Fix a crash when trying to decode WMV-3/VC1 with the DMO decoder unavailable
* Updated Armenian, Basque, Belarusian, British English, Catalan, Czech, Simplified and Traditional Chinese,
  Dutch, French, German, Hebrew, Hungarian, Italian, Greek, Japanese, Korean, Polish, Portuguese (Brazil),
  Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Turkish and Ukrainian translations
* Updated MediaInfoLib to v0.7.67
* Updated ZenLib to v0.4.29 r453
* Updated Little CMS to v2.6b (git 579b3aa)
* Updated Unrar to v5.0.0.14
! Internal subtiles renderer: Vobsub/PGS/DVB subtitles are now rendered relative to the video frame
! Warnings were not displayed in pixel shader compilation output
! DVB: It was sometimes impossible to restart playback after it was stopped
! Ticket #720/#1807/#2625/#3161 Improve stability in analog capture mode when using EVR-CP/Sync renderer
! Ticket #1300/#2081, Toolbars auto-hiding now always works properly in multi-display configurations
! Ticket #3243, Fix a crash when starting MPC-HC with the web internal enabled and certain regional settings
! Ticket #3479, Improve the behavior of MPC-HC when some security tools prevent it
  from initializing correctly
! Ticket #3650, Improve the speed of subtitles toggling (on/off) and switching
! Ticket #3668, MPC-HC could crash when reloading the subtitles
! Ticket #3922, "Play > Subtitles" menu actions were off by one when playing a DVD
  and only external subtitles were available